Symbol table finished